fixed cv overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -43,13 +43,13 @@
   font-size: 12px;
 }
 
-#text {
+.text {
 	float: left;
 	height: 600px;
 	padding-left: 40px;
 	overflow: scroll;
 }
-.image {
+#image {
 	float: left;
 	margin-left: 130px;
 	margin-top: 100px;
